fix(linear-progress): Support high contrast mode (#5190)

--- a/packages/mdc-linear-progress/_variables.scss
+++ b/packages/mdc-linear-progress/_variables.scss
@@ -19,3 +19,4 @@
 // THE SOFTWARE.
 
 $mdc-linear-progress-baseline-buffer-color: #e6e6e6 !default;
+$mdc-linear-progress-height: 4px;
